--- a/app/devtool.html
+++ b/app/devtool.html
@@ -11,7 +11,7 @@
     <!-- endbuild -->
   </head>
   <body>
-    <h1>Luffa</h1>
+    <h1>'Allo, 'Allo!</h1>
 
     <!-- build:js scripts/popup-vendor.js -->
     <!-- bower:js -->
@@ -19,7 +19,7 @@
     <!-- endbuild -->
 
     <!-- build:js scripts/popup.js -->
-    <script src="scripts/popup.js"></script>
+    <script src="scripts/panel.js"></script>
     <!-- endbuild -->
   </body>
 </html>
