--- a/app/devtool.html
+++ b/app/devtool.html
@@ -1,25 +1,23 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <!-- build:css styles/popup-vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css styles/main.css -->
-    <link href="styles/main.css" rel="stylesheet">
-    <!-- endbuild -->
-  </head>
-  <body>
-    <h1>'Allo, 'Allo!</h1>
+<meta charset="utf-8">
+<!-- build:css styles/main.css -->
+<link href="styles/main.css" rel="stylesheet">
+<link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="libs/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+<!-- endbuild -->
+<body>
 
-    <!-- build:js scripts/popup-vendor.js -->
-    <!-- bower:js -->
-    <!-- endbower -->
-    <!-- endbuild -->
+<div class="row">
+  <div class="col-md-4">.col-md-4</div>
+  <div class="col-md-4">.col-md-4</div>
+  <div class="col-md-4">.col-md-4</div>
+</div>
+<script src="libs/jquery.min.js"></script>
+<script src="libs/bootstrap/js/bootstrap.min.js"></script>
+<!-- build:js scripts/popup.js -->
+<script src="scripts/panel.js"></script>
+<!-- endbuild -->
 
-    <!-- build:js scripts/popup.js -->
-    <script src="scripts/panel.js"></script>
-    <!-- endbuild -->
-  </body>
+</body>
 </html>
